# sdlplusplus

./: .gitmodules  CMakeLists.txt  cmake.py
include/: sdlpp.h
include/sdlpp/: common.h  event.h
src/: sdlpp.cpp
src/sdlpp/: event.cpp
